--- a/src/br/com/treino/JavaIII.form
+++ b/src/br/com/treino/JavaIII.form
@@ -300,7 +300,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton6">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Limpar Campos (Componentes)"/>
+        <Property name="text" type="java.lang.String" value="Limpar Campos (Componentes com instanceof)"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
