Calculadora 5, somente numeros

--- a/src/br/com/calculadora/calculadora5.form
+++ b/src/br/com/calculadora/calculadora5.form
@@ -147,6 +147,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField1">
+          <Events>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextField1KeyReleased"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField2">
         </Component>
