--- a/src/br/com/calculadora/calculadora6.form
+++ b/src/br/com/calculadora/calculadora6.form
@@ -53,7 +53,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="36" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="calculadora 5"/>
+        <Property name="text" type="java.lang.String" value="Calculadora 6"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
