--- a/src/br/com/cadastromodelotabela/FormCadastroPessoas.form
+++ b/src/br/com/cadastromodelotabela/FormCadastroPessoas.form
@@ -257,6 +257,9 @@
         <Property name="text" type="java.lang.String" value="Excluir"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btExcluirActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
