--- a/src/br/com/cadastromodelotabela/FormCadastroPessoas.form
+++ b/src/br/com/cadastromodelotabela/FormCadastroPessoas.form
@@ -251,6 +251,9 @@
         <Property name="text" type="java.lang.String" value="Gravar"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btGravarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btExcluir">
       <Properties>
