--- a/src/br/com/threads/FormThread.form
+++ b/src/br/com/threads/FormThread.form
@@ -88,6 +88,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Mostrar Tabuada do numero 7 - Com Thread"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
       <Properties>
